--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family:'Inter', sans-serif;
   margin: 0;
   padding: 20px;
   background: #f9f9f9;
 }
+
 
 .tela {
   display: none;
@@ -11,6 +12,13 @@ body {
 .tela.ativa {
   display: block;
 }
+
+.tela img {
+    display: block;        
+    margin: auto; 
+    padding: 32px;      
+}
+
 
 /* Barra de progresso */
 .progress-bar {
