--- a/style.css
+++ b/style.css
@@ -86,6 +86,21 @@ p {
   font-size: 16px;
 }
 
+.grid-radios {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* duas colunas */
+  gap: 0px 50px; /* espaçamento vertical e horizontal */
+  max-width: 500px; /* opcional, controla largura */
+  margin: 0 auto;   /* centraliza */
+}
+
+.grid-radios label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-size: 16px;
+}
+
 /* Barra de progresso */
 .progress-bar {
   width: 100%;
