--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ input[type="checkbox"]:checked {
 input[type="checkbox"]:checked::after {
   content: "";
   position: absolute;
-  top: 2px;
+  top: 1px;
   left: 5px;
   width: 4px;
   height: 10px;
@@ -131,11 +131,17 @@ input[type="checkbox"]:focus {
 label {
   display: flex;
   align-items: center;
-  gap: 10px;
+
   cursor: pointer;
   user-select: none;
   font-size: 16px;
-  color: #f3c;
+  font-weight: 400;
+  color: #90f;
+}
+
+.input-temaOutro {
+  font-weight: 600;
+  color: #ff00cc;
 }
 
 
@@ -177,6 +183,15 @@ label {
 }
 
 /* Botões */
+.buttons_home {
+  width: 90%;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-top: 48px;
+}
+
 .buttons {
     position: fixed;
     bottom: 0px;
