--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ p {
   cursor: pointer;
   margin: 8px 0;
   user-select: none;
-  color: #90f;
+  color: #140033;
   font-size: 16px;
 }
 
@@ -221,6 +221,41 @@ p {
 /* Tela 3 - Lista de temas       */
 /* ----------------------------- */
 /* Título "Outro?" */
+.select-busca {
+  position: relative; /* já tem */
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+/* Lista de temas */
+#listaTemas {
+  position: absolute;      /* mantém absolute para sobrepor outros elementos */
+  top: 56px;  /* 4px de espaçamento do input */
+  left: 0;
+  width: 100%;
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 16px;
+  max-height: 200px;
+  overflow-y: auto;
+  z-index: 10;
+  display: none;
+  color: #140033;
+}
+
+/* Itens da lista */
+#listaTemas label {
+  display: block;
+  padding: 10px;
+  cursor: pointer;
+}
+
+#listaTemas label:hover {
+  background: #f0f0f0;
+}
+
 .select-busca h2 {
   margin-top: 24px;
   margin-bottom: 8px;
